welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:9: error: type mismatch;
 found   : Unit
 required: Int
	if (Math.abs(c)==Math.abs(d)) {return 0
        ^